# V2_ReqToTest

./: app.py  pyproject.toml  requirements.txt
Embedding/: document_builder.py  embedding_model.py  vector_store.py
Evaluator/: llm_judge.py
Pre_processing/: colon_cleaner.py  lowercase_cleaner.py  row_chunker.py
Retriever/: batch_generator.py  context.py  excel_loader.py  id_handler.py  metadata_filter.py  output_writer.py  similarity_executor.py  text_utils.py
chroma_store/: chroma.sqlite3
